Fix missing space in Afterwords component and update margin for smaller desktop screens

--- a/react/src/styles/global.sass
+++ b/react/src/styles/global.sass
@@ -60,7 +60,7 @@ a.nolinkdecoration
   font-size: 14px
 
 .titleline
-  margin: 30px 7.5% 30px 7.5%
+  margin: 30px 5% 30px 5%
   font-size: 12px
   display: flex
   align-items: center
@@ -122,8 +122,8 @@ a.nolinkdecoration
   min-width: 1000px
   min-height: 473px
   text-align: center
-  margin-left: 7.5%
-  margin-right: 7.5%
+  margin-left: 5%
+  margin-right: 5%
   display: flex
   flex-direction: column
   justify-content: flex-start
@@ -168,7 +168,12 @@ a.nolinkdecoration
   margin-top: 25px
 
 .afterwords
-  padding-top: 2%
+  padding-top: 20px 
+  min-width: 1060px
+  display: flex
+  justify-content: center
+  margin-left: 5%
+  margin-right: 5%
 
 .title
   font-family: Poppins
